Rewrite the frontend without jquery + backend views change

--- a/rechat/templates/rechat/index.html
+++ b/rechat/templates/rechat/index.html
@@ -1,12 +1,1 @@
-{% extends "base.html" %}
-{% load i18n staticfiles %}
-
-{% block title %}{% trans 'Chat' %}{% endblock %}
-
-{% block content %}
-<div class="row">
-	<div class="col-xs-12 text-center">
-		{% include "rechat/widget.html" %}
-	</div>
-</div>
-{% endblock %}
+{% extends base_template %}
