--- a/rechat/templates/rechat/rooms.html
+++ b/rechat/templates/rechat/rooms.html
@@ -1,4 +1,7 @@
 {% extends base_template %}
+{% load i18n %}
+
+{% block title %}{% trans "Rooms" %}{% endblock %}
 
 {% block content %}
 <ul id="rooms" class="list-group">
